--- a/pages/content/amp-dev/about/websites.html
+++ b/pages/content/amp-dev/about/websites.html
@@ -1,7 +1,7 @@
 ---
-$title: AMP Websites
+$title: ABC Websites
 $view: /views/overview/what-is-amp.j2
-description: AMP is a simple and robust format to ensure your website is fast, user-first, and makes money. AMP provides long-term success for your web strategy with distribution across ...
+description: ABC is a simple and robust format to ensure your website is fast, user-first, and makes money. ABC provides long-term success for your web strategy with distribution across ...
 sharing_images:
   square: /static/img/sharing/about-websites-1x1.png
   wide: /static/img/sharing/about-websites-600x314.png
@@ -38,7 +38,7 @@ kpis:
           </div>
 
           <h2 class="ap-o-stage-content-subline">{{ _('Compelling, smooth and instant') }}</h2>
-          <h1 class="ap-o-stage-content-headline">{{ _('Easily create user first websites with AMP.') }}</h1>
+          <h1 class="ap-o-stage-content-headline">{{ _('Easily create user first websites with ABC.') }}</h1>
 
           {% do doc.styles.addCssFile('/css/components/atoms/button.css') %}
           <a href="../documentation/guides-and-tutorials/start/create/index.md?format=websites" class="ap-o-stage-content-button ap-a-btn">{{ _('Get started') }}</a>
@@ -52,7 +52,7 @@ kpis:
 <section class="ap--content">
   <div class="ap--container-fluid">
     <div class="ap-m-copy ap-m-copy-left-small">
-      <h1>{{ _('What is<br> AMP?') }}</h1>
+      <h1>{{ _('What is<br> ABC?') }}</h1>
       <h5>{{ _('Web pages that are compelling, smooth, and load near instantaneously') }}</h5>
     </div>
   </div>
@@ -61,7 +61,7 @@ kpis:
 <section class="ap--component-visual">
   <div class="ap-o-component-visual ap--container-fluid">
     <div class="ap-o-component-visual-copy ap-m-copy ap-m-copy-left-small" amp-fx="fade-in fly-in-left" data-duration="1s" data-fly-in-distance="5%" data-margin-start="0%">
-      <p>{{ _('AMP is a simple and robust format to ensure your website is fast, user-first, and makes money. AMP provides long-term success for your web strategy with distribution across popular platforms and reduced operating and development costs.') }}</p>
+      <p>{{ _('ABC is a simple and robust format to ensure your website is fast, user-first, and makes money. ABC provides long-term success for your web strategy with distribution across popular platforms and reduced operating and development costs.') }}</p>
       <div class="ap-o-component-visual-link">
         <a href="../documentation/guides-and-tutorials/index.html" class="ap-m-lnk ap-m-lnk-square">
           <div class="ap-a-ico ap-m-lnk-icon">
@@ -99,7 +99,7 @@ kpis:
   <div class="ap--container-fluid">
     <div class="ap-m-copy ap-m-copy-left-small" amp-fx="fade-in fly-in-left" data-duration="1s" data-fly-in-distance="5%">
       <h3>{{ _('Create great web experiences for users across the open web') }}</h3>
-      <p>{{ _('AMP enables the creation of websites and ads that are consistently fast, beautiful and high-performing across devices and distribution platforms. Publishers and advertisers can decide how to present their content that emphasizes a user-first experience.') }}</p>
+      <p>{{ _('ABC enables the creation of websites and ads that are consistently fast, beautiful and high-performing across devices and distribution platforms. Publishers and advertisers can decide how to present their content that emphasizes a user-first experience.') }}</p>
     </div>
 
     {% with %}
@@ -164,7 +164,7 @@ kpis:
           {% do doc.icons.useIcon('icons/internal.svg') %}
           <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#internal"></use></svg>
         </div>
-        <span class="ap-m-lnk-text">{{ _('Get started with AMP') }}</span>
+        <span class="ap-m-lnk-text">{{ _('Get started with ABC') }}</span>
       </a>
     </div>
 
@@ -201,7 +201,7 @@ kpis:
 </section>
 
 <div class="ap--container">
-  <h1 class="ap--made-of-headline">{{ _('What AMP HTML is made of') }}</h1>
+  <h1 class="ap--made-of-headline">{{ _('What ABC HTML is made of') }}</h1>
 </div>
 
 {% do doc.styles.addCssFile('/css/components/molecules/biggy.css') %}
@@ -221,13 +221,13 @@ kpis:
   <div class="ap--container">
     <div class="ap-m-copy ap-m-copy-left">
       <h2>{{ _('Built-in components') }}</h2>
-      <p>{{ _('AMP HTML is HTML with some restrictions for reliable performance.') }}</p>
+      <p>{{ _('ABC HTML is HTML with some restrictions for reliable performance.') }}</p>
 
-      <p>{{ _('Though most tags in an AMP HTML page are regular HTML tags, some HTML tags are replaced with AMP-specific tags (see also HTML Tags in the AMP spec). These custom elements,  called AMP HTML  components, make common patterns easy to implement in a performant way.') }}</p>
+      <p>{{ _('Though most tags in an ABC HTML page are regular HTML tags, some HTML tags are replaced with ABC-specific tags (see also HTML Tags in the ABC spec). These custom elements,  called ABC HTML  components, make common patterns easy to implement in a performant way.') }}</p>
 
-      <p>{{ _('For example, the amp-img tag provides full srcset support even in browsers that don’t support it yet. Learn how to create your first AMP HTML page.') }}</p>
+      <p>{{ _('For example, the amp-img tag provides full srcset support even in browsers that don’t support it yet. Learn how to create your first ABC HTML page.') }}</p>
 
-      <p>{{ _('AMP pages are discovered by search engines and other platforms through the HTML tag. You can choose to have a non-AMP version and an AMP version of your page, or just an AMP version. ') }}</p>
+      <p>{{ _('ABC pages are discovered by search engines and other platforms through the HTML tag. You can choose to have a non-ABC version and an ABC version of your page, or just an ABC version. ') }}</p>
       <div class="ap-m-copy-left-link">
         <a href="../documentation/guides-and-tutorials/optimize-measure/discovery.md?format=websites" class="ap-m-lnk ap-m-lnk-square">
           <div class="ap-a-ico ap-m-lnk-icon">
@@ -240,13 +240,13 @@ kpis:
     </div>
 
     <div class="ap-m-copy ap-m-copy-right">
-      <h2>{{ _('AMP Caches') }}</h2>
+      <h2>{{ _('ABC Caches') }}</h2>
 
-      <p>{{ _('AMP pages can be cached for near instantaneous loading on the web. Platforms like Google run AMP caches to enable fast loading of your content from their service.') }}</p>
+      <p>{{ _('ABC pages can be cached for near instantaneous loading on the web. Platforms like Google run ABC caches to enable fast loading of your content from their service.') }}</p>
 
-      <p>{{ _('The Google AMP Cache is a proxy-based content delivery network for delivering all valid AMP documents. It fetches AMP HTML pages, caches them, and improves page performance automatically. When using the Google AMP Cache, the document, all JS files and all images load from the same origin that is using HTTP 2.0 for maximum efficiency. <br> The cache also comes with a built-in validation system which confirms that the page is guaranteed to work, and that it doesn\'t depend on external resources. The validation system runs a series of  assertions confirming the page’s markup meets the AMP HTML specification.') }}</p>
+      <p>{{ _('The Google Cache is a proxy-based content delivery network for delivering all valid ABC documents. It fetches ABC HTML pages, caches them, and improves page performance automatically. When using the Google Cache, the document, all JS files and all images load from the same origin that is using HTTP 2.0 for maximum efficiency. <br> The cache also comes with a built-in validation system which confirms that the page is guaranteed to work, and that it doesn\'t depend on external resources. The validation system runs a series of  assertions confirming the page’s markup meets the ABC HTML specification.') }}</p>
 
-      <p>{{ _('Another version of the validator comes bundled with every AMP page. This version can log validation errors directly to the browser’s console when the page is rendered, allowing you to see how complex changes in your code might impact performance and user experience.') }}</p>
+      <p>{{ _('Another version of the validator comes bundled with every ABC page. This version can log validation errors directly to the browser’s console when the page is rendered, allowing you to see how complex changes in your code might impact performance and user experience.') }}</p>
 
       <div class="ap-m-copy-right-link">
         <a href="../documentation/guides-and-tutorials/learn/amp-caches-and-cors/how_amp_pages_are_cached.md" class="ap-m-lnk ap-m-lnk-square">
@@ -254,7 +254,7 @@ kpis:
             {% do doc.icons.useIcon('icons/internal.svg') %}
             <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#internal"></use></svg>
           </div>
-          <span class="ap-m-lnk-text">{{ _('Learn more about caching in AMP') }}</span>
+          <span class="ap-m-lnk-text">{{ _('Learn more about caching in ABC') }}</span>
         </a>
       </div>
     </div>
@@ -264,7 +264,7 @@ kpis:
 
 <section class="ap--case-grid">
   <div class="ap--container">
-    <h1 class="ap-o-case-grid-headline">{{ _('Explore use cases of AMP websites') }}</h1>
+    <h1 class="ap-o-case-grid-headline">{{ _('Explore use cases of ABC websites') }}</h1>
   </div>
 
   <div class="ap--container-fluid">
