--- a/pages/content/amp-dev/index.html
+++ b/pages/content/amp-dev/index.html
@@ -1,45 +1,45 @@
 ---
-$title: AMP - a web component framework to easily create user-first web experiences
+$title: ABC - a web component framework to easily create user-first web experiences
 $titles:
   navigation: Start
 $view: /views/custom.j2
-description: 'Whether you are a publisher, e-commerce company, storyteller, advertiser or email sender, AMP makes it easy to create great experiences on the web. Use AMP to build websites, stories, ads and emails.'
+description: 'Whether you are a publisher, e-commerce company, storyteller, advertiser or email sender, ABC makes it easy to create great experiences on the web. Use ABC to build websites, stories, ads and emails.'
 
 benefits: !g.yaml /shared/data/benefits.yaml
 
 format_explainer:
   - name: websites
     visual: views/partials/format-visuals/websites.j2
-    headline: Use AMP to build great experiences across the web
-    description: "Whether you are a publisher, e-commerce company, storyteller, advertiser or email sender, AMP makes it easy to create great experiences on the web. Use AMP to build:"
+    headline: Use ABC to build great experiences across the web
+    description: "Whether you are a publisher, e-commerce company, storyteller, advertiser or email sender, ABC makes it easy to create great experiences on the web. Use ABC to build:"
     url: /about/websites.html
   - name: stories
     visual: views/partials/format-visuals/stories.j2
-    headline: Use AMP to create visual stories on the web.
-    description: "Whether you are a publisher, e-commerce company, storyteller, advertiser or email sender, AMP makes it easy to create great experiences on the web. Use AMP to build:"
+    headline: Use ABC to create visual stories on the web.
+    description: "Whether you are a publisher, e-commerce company, storyteller, advertiser or email sender, ABC makes it easy to create great experiences on the web. Use ABC to build:"
     url: /about/stories.html
   - name: ads
     visual: views/partials/format-visuals/ads.j2
-    headline: Use AMP to build and serve lightning fast, safe ads to pages and stories.
-    description: "Whether you are a publisher, e-commerce company, storyteller, advertiser or email sender, AMP makes it easy to create great experiences on the web. Use AMP to build:"
+    headline: Use ABC to build and serve lightning fast, safe ads to pages and stories.
+    description: "Whether you are a publisher, e-commerce company, storyteller, advertiser or email sender, ABC makes it easy to create great experiences on the web. Use ABC to build:"
     url: /about/ads.html
   - name: email
     visual: views/partials/format-visuals/email.j2
-    headline: Use AMP to send interactive, dynamic emails.
-    description: "Whether you are a publisher, e-commerce company, storyteller, advertiser or email sender, AMP makes it easy to create great experiences on the web. Use AMP to build:"
+    headline: Use ABC to send interactive, dynamic emails.
+    description: "Whether you are a publisher, e-commerce company, storyteller, advertiser or email sender, ABC makes it easy to create great experiences on the web. Use ABC to build:"
     url: /about/email.html
 
 sampler:
-  - title: AMP Website
+  - title: ABC Website
     url: /static/samples/standalone/amp-website/
     line: "56"
-  - title: AMP Story
+  - title: ABC Story
     url: /static/samples/standalone/amp-story/
     line: "487"
-  - title: AMP Email
+  - title: ABC Email
     url: /static/samples/standalone/amp-email/
     line: "90"
-  - title: AMP Ad
+  - title: ABC Ad
     url: /static/samples/standalone/amp-ad/
     line: "0"
 
@@ -57,7 +57,7 @@ success_stories:
     <div class="ap-o-stage">
       <div class="ap--container-fluid">
         <div class="ap-o-stage-content">
-          <h1 class="ap-o-stage-content-headline">{{ _('AMP is a web component framework to easily create <span style="white-space: nowrap;">user-first</span><br>') }} {% include 'views/partials/rolling-formats.j2' %}</h1>
+          <h1 class="ap-o-stage-content-headline">{{ _('ABC is a web component framework to easily create <span style="white-space: nowrap;">user-first</span><br>') }} {% include 'views/partials/rolling-formats.j2' %}</h1>
           <a href="documentation/index.html" class="ap-o-stage-content-button ap-a-btn">{{ _('Get started') }}</a>
         </div>
       </div>
@@ -84,7 +84,7 @@ success_stories:
     [% if posts|length %]
     <div class="ap-m-copy">
       <h2>{{ _('The latest news') }}</h2>
-      <p>{{ _('Don\'t want to miss any of the great stuff that happens around AMP? Then always be first in line and subscribe to our newsletter!') }}</p>
+      <p>{{ _('Don\'t want to miss any of the great stuff that happens around ABC? Then always be first in line and subscribe to our newsletter!') }}</p>
 
       <a class="ap-m-lnk ap-m-lnk-square ap--newsletter-double" href="https://services.google.com/fb/forms/ampnewsletter-doubleopt-in/">
         <div class="ap-a-ico ap-m-lnk-icon">
@@ -227,7 +227,7 @@ success_stories:
             {% do doc.icons.useIcon('icons/amp-' + format.name + '.svg') %}
             <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#amp-{{ format.name }}"></use></svg>
           </div>
-          <span class="ap-o-format-explainer-button-text">AMP {{ _(format.name) }}</span>
+          <span class="ap-o-format-explainer-button-text">ABC {{ _(format.name) }}</span>
         </button>
         {% endfor %}
       </div>
@@ -241,7 +241,7 @@ success_stories:
               {% do doc.icons.useIcon('icons/internal.svg') %}
               <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#internal"></use></svg>
             </div>
-            <span class="ap-m-lnk-text">{{ _('Learn more about AMP') }} {{ format.name }}</span>
+            <span class="ap-m-lnk-text">{{ _('Learn more about ABC') }} {{ format.name }}</span>
           </a>
         </div>
         {% endfor %}
@@ -298,7 +298,7 @@ success_stories:
             {% do doc.icons.useIcon('icons/internal.svg') %}
             <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#internal"></use></svg>
           </div>
-          <span class="ap-m-lnk-text">{{ _('Get started with AMP') }}</span>
+          <span class="ap-m-lnk-text">{{ _('Get started with ABC') }}</span>
         </a>
       </div>
 
@@ -335,7 +335,7 @@ success_stories:
 
   <section class="ap--case-grid">
     <div class="ap--container">
-      <h1 class="ap-o-case-grid-headline">{{ _('Build anything with AMP.') }}</h1>
+      <h1 class="ap-o-case-grid-headline">{{ _('Build anything with ABC.') }}</h1>
 
     </div>
 
@@ -367,8 +367,8 @@ success_stories:
     </div>
 
     <div class="ap-m-copy">
-      <h2>{{ _('Explore AMP<br/> success stories') }}</h2>
-      <p>{{ _('Don\'t take our word for it - read case studies from your industry and see how AMP has produced positive results.') }}</p>
+      <h2>{{ _('Explore ABC<br/> success stories') }}</h2>
+      <p>{{ _('Don\'t take our word for it - read case studies from your industry and see how ABC has produced positive results.') }}</p>
 
       <a href="about/success-stories/index.html" class="ap-m-lnk ap-m-lnk-square">
         <div class="ap-a-ico ap-m-lnk-icon">
@@ -399,7 +399,7 @@ success_stories:
             </amp-img>
           </div>
           <h3 class="ap-m-shift-card-headline">{{ _('Many ways for you to contribute') }}</h3>
-          <p class="ap-m-shift-card-copy">{{ _('The AMP Project would not be possible without help from all members of the community whether you are a developer, content creator or provider of services relevant to AMP.') }}</p>
+          <p class="ap-m-shift-card-copy">{{ _('The ABC Project would not be possible without help from all members of the community whether you are a developer, content creator or provider of services relevant to ABC.') }}</p>
         </a>
       </div>
 
@@ -413,8 +413,8 @@ success_stories:
               height="205">
             </amp-img>
           </div>
-          <h3 class="ap-m-shift-card-headline">{{ _('Reporting issues with AMP') }}</h3>
-          <p class="ap-m-shift-card-copy">{{ _('If you have feedback or are experiencing technical issues with AMP, please file it using the issue tracker.') }}</p>
+          <h3 class="ap-m-shift-card-headline">{{ _('Reporting issues with ABC') }}</h3>
+          <p class="ap-m-shift-card-copy">{{ _('If you have feedback or are experiencing technical issues with ABC, please file it using the issue tracker.') }}</p>
         </a>
       </div>
 
@@ -424,8 +424,8 @@ success_stories:
   <section class="ap--get-started ap--container">
     {% do doc.styles.addCssFile('css/components/atoms/button.css') %}
     <div class="ap-m-copy ap-m-copy-center">
-      <h2>{{ _('Build your first AMP page now') }}</h2>
-      <p>{{ _('You don’t need to download AMP and no installation is required.<br/> Because it is an open-source project, it is free!') }}</p>
+      <h2>{{ _('Build your first ABC page now') }}</h2>
+      <p>{{ _('You don’t need to download ABC and no installation is required.<br/> Because it is an open-source project, it is free!') }}</p>
       <a href="documentation/guides-and-tutorials/index.html" class="ap-a-btn">{{ _('Get started') }}</a>
     </div>
   </section>
