--- a/pages/content/amp-dev/community/roadmap.html
+++ b/pages/content/amp-dev/community/roadmap.html
@@ -2,6 +2,11 @@
 $title: Roadmap
 $order: 2
 $view: /views/custom.j2
+flyout:
+  format: ads
+  description: where we're going
+  icon: amp-ads
+
 roadmap: !g.json /shared/data/roadmap.json
 
 ---
