removed flyout for roadmap

--- a/pages/content/amp-dev/index-2021.html
+++ b/pages/content/amp-dev/index-2021.html
@@ -79,7 +79,7 @@ success_stories:
     </div>
 
     <div class="ap-home-stage-text">
-      <h1 class="ap-h1">{{ _('Knowledge graph applications for industry, science and government.') }}</h1>
+      <h1 class="ap-h1">{{ _("Knowledge graph applications for industry, science and government.") }}</h1>
     </div>
   </section>
   <section class="ap-formats">
@@ -160,15 +160,15 @@ success_stories:
 
   <section class="ap-center-stage">
     <div class="ap-center-stage-content">
-      <h2 class="ap-h2">{{ _('New technology should aspire to accomplish two goals:') }}</h2>
+      <h2 class="ap-h2">{{ _("New technology should aspire to accomplish two goals:") }}</h2>
       <h3 class="">
-        {{ _('Take an existing business process and significantly reduce its total cost of implementation.') }}
+        {{ _("Take an existing business process and significantly reduce its total cost of implementation.") }}
       </h3>
       <h3 class="">
-        {{ _('Develop new, productive habits among consumers.') }}
+        {{ _("Develop new, productive habits among consumers.") }}
       </h3>
       <h2 class="ap-h2">
-        {{ _('Consortium members aspire to accomplish both goals.') }}
+        {{ _("Consortium members aspire to accomplish both goals.") }}
       </h2>
     </div>
   </section>
@@ -224,12 +224,12 @@ success_stories:
   </section>
   <section class="ap-intro ap-section --col-right">
     <div class="ap-text-block">
-      <h1>{{ _('Learn more about knowledge graph applications') }}</h1>
-      <p>{{ _('Read case studies from industry, science and government.') }}</p>
+      <h1>{{ _("Learn more about knowledge graph applications") }}</h1>
+      <p>{{ _("Read case studies from industry, science and government.") }}</p>
       {% with %}
         {% set square = true %}
-        {% set href = "romeo/0/index.html" %}
-        {% set text = _('See all case studies') %}
+        {% set href = 'romeo/0/index.html' %}
+        {% set text = _("See all case studies") %}
         {% include '/views/2021/partials/content/link.j2' %}
       {% endwith %}
     </div>
